[project]
name = "cerebro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.106.0",
    "httpx>=0.28.1",
    "openai>=2.41.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
